--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@ out/production/Appiecatie/objects/AccountList.class
 out/production/Appiecatie/objects/ZuipLevel.class
 
 out/production/Appiecatie/views/sample.fxml
+
+out/production/Appiecatie/main/Accounts
+
+out/production/Appiecatie/main/contollers/Controller.class
+
+out/production/Appiecatie/main/objects/Account.class
+
+out/production/Appiecatie/main/objects/AccountList.class
+
+out/production/Appiecatie/main/views/bierview.fxml
+
+out/production/Appiecatie/main/views/sample.fxml
