--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,12 @@
 
     <target name="compile">
         <mkdir dir="${classes.dir}"/>
+
+        <copy todir="${classes.dir}">
+            <fileset dir="${src.dir}/main/files"/>
+            <fileset dir="${src.dir}/main/views"/>
+        </copy>
+
         <javac srcdir="${src.dir}" destdir="${classes.dir}"/>
     </target>
 
