--- a/build.xml
+++ b/build.xml
@@ -18,8 +18,8 @@
 
         <copy todir="${classes.dir}/main">
             <fileset dir="${src.dir}/main/">
-                <exclude name="controllers"/>
-                <exclude name="objects"/>
+                <exclude name="controllers/*"/>
+                <exclude name="objects/*"/>
                 <exclude name="App.java"/>
             </fileset>
         </copy>
