--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir" value="${build.dir}/jar"/>
 
-    <property name="main-class" value="main.main.App"/>
+    <property name="main-class" value="main.App"/>
 
 
     <target name="clean">
