small build change

--- a/build.xml
+++ b/build.xml
@@ -18,10 +18,8 @@
 
         <copy todir="${classes.dir}">
             <fileset dir="${src.dir}/main">
-                <exclude name="controllers/*.java"/>
-                <exclude name="objects/*/*.java"/>
-                <exclude name="objects/*.java"/>
-                <exclude name="App.java"/>
+                <exclude name="**/*.java"/>
+
             </fileset>
         </copy>
 
