--- a/build.xml
+++ b/build.xml
@@ -5,6 +5,8 @@
     <property name="build.dir" value="build"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir" value="${build.dir}/jar"/>
+    <property name="filesDir" value="${src.dir}/main/main/files"/>
+    <property name="viewsDir" value="${src.dir}/main/main/views"/>
 
     <property name="main-class" value="main.App"/>
 
@@ -15,14 +17,6 @@
 
     <target name="compile">
         <mkdir dir="${classes.dir}"/>
-
-        <copy todir="${classes.dir}">
-            <fileset dir="${src.dir}/main">
-                <exclude name="**/*.java"/>
-
-            </fileset>
-        </copy>
-
         <javac srcdir="${src.dir}" destdir="${classes.dir}"/>
     </target>
 
@@ -32,6 +26,8 @@
             <manifest>
                 <attribute name="Main-Class" value="${main-class}"/>
             </manifest>
+            <fileset dir="${filesDir}" />
+            <fileset dir="${viewsDir}" />
         </jar>
     </target>
 
