--- a/build.xml
+++ b/build.xml
@@ -27,7 +27,7 @@
                 <attribute name="Main-Class" value="${main-class}"/>
             </manifest>
 
-            <fileset dir="${src.dir}/main" excludes="main"/>
+            <fileset dir="${resources.dir}"/>
         </jar>
     </target>
 
