--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ src/main/resources/files/JarfStats
 out
 .idea
 
+
+src/main/resources/files/monthChartData
+
+src/main/resources/files/yearChartData
