--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ src/main/resources/files/LineChartData
 src/main/resources/files/JarfStats
 src/main/resources/files/monthChartData
 src/main/resources/files/yearChartData
+src/main/resources/files/ZuipStats
 
 #other stuff
 out
